# SuperpointSLAM

./: CameraTrajectory.txt  README.md
keypoint_camera_pub/: CMakeLists.txt  package.xml
keypoint_camera_pub/src/: color_camera.cpp  depth_camera.cpp  intrinsic_camera.cpp  ir_camera.cpp  pointcloud_camera.cpp  utils.hpp  window.hpp
slam_bk/: CMakeLists.txt  package.xml
slam_bk/include/: Frame.h  LoopClosing.h  MapDrawer.h  System.h  Tracking.h  Viewer.h
slam_bk/scripts/cpp/: receiver_node.cpp
slam_bk/scripts/python/: Feature_Extractor.py  GCN_extractor.py  Pose_Receiver.py  evaluate_rpe.py  generate_pointc.py  orb_sender.py  orbbec_camera_py.py  sender_node.py
slam_bk/src/: Frame.cc  FrameDrawer.cc  LoopClosing.cc  MapDrawer.cc  MapPoint.cc  System.cc  Tracking.cc  Viewer.cc
slam_interfaces/: CMakeLists.txt  package.xml
slam_interfaces/msg/: Posemsg.msg  Slamframe.msg
slam_interfaces/srv/: SlamMsg.srv
superpoint_slam/: CMakeLists.txt  package.xml
superpoint_slam/scripts/python/: associate.py  cpp_slam.py  dataset_config.py  debug_slam.py  evaluate_ate.py  feature_extractor.py  make_dataset.py  offline_slam.py  online_slam.py  orb_sender.py  pose_receiver.py  superpoint_sender.py  utils.py
superpoint_slam/scripts/python/Log/: OrbbecSDK.log.txt
superpoint_slam/scripts/python/install/: local_setup.sh  setup.sh
superpoint_slam/src/: cpp_slam.py
